Fixed show paper animation looking blocky on mobile due to stop points

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -800,8 +800,18 @@ i {
     z-index: 3;
   }
 
+  80% {
+    transform: translateY(-7.5rem);
+    z-index: 3;
+  }
+
+  90% {
+    transform: translateY(-3.75rem);
+    z-index: 3;
+  }
+
   100% {
-    transform: 0;
+    transform: translateY(0);
     z-index: 3;
   }
 }
